--- a/sass/_case-of-study.sass
+++ b/sass/_case-of-study.sass
@@ -87,7 +87,7 @@
         padding-left: 0px
         li
           position: relative
-          margin-block: 15px
+          margin-bottom: 15px
           &:last-child
             margin-bottom: 0
           span
