--- a/sass/_section-theproblem.sass
+++ b/sass/_section-theproblem.sass
@@ -87,3 +87,38 @@
       strong
         font-weight: 600
         color: var(--strongpink)
+
+  // themes
+  &.theme-howoperate
+    background-color: var(--primary-color)
+    padding: 70px 0 90px
+    .title-section
+      h3
+        color: var(--aqua-fosfo)
+    .section-theproblem-items
+      justify-content: center    
+  &.theme-primary
+    background-color: var(--primary-color)
+    padding: 70px 0 90px
+    .title-section
+      h3
+        color: var(--lightblue)
+    .section-theproblem-items
+      justify-content: space-between
+    .section-theproblem-card 
+      .card-title
+        &.fst
+          color: var(--black-color)
+    .section-theproblem-extra
+      background-color: var(--secondary-color)
+      border-radius: 10px
+      padding: 30px 40px
+      display: flex
+      justify-content: space-between
+    .datanumbers-item
+      .digit
+        color: var(--lightblue)
+        font-weight: 500
+        font-size: 25px
+
+
