--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -24,6 +24,10 @@
   --border-input-color: #D1D5DB
   --border-input-color-graygreen: #D9E9EA
   --primary-font: "Poppins", sans-serif
+  --lightgray: rgba(86, 86, 86, .75)
+  --aqua-fosfo: #2DD4BF
+  --dark-bg: #062D3A
+  --superlightgray: #F1F5F9
 
 
 .color-primary
