--- a/sass/_why-amalga.sass
+++ b/sass/_why-amalga.sass
@@ -34,6 +34,11 @@
       margin: 0 auto
     h2, p
       color: var(--white)
+    h3
+        color: var(--aqua-fosfo)
+        font-size: 18px
+        text-transform: uppercase
+        margin-bottom: 15px      
     h2
       font-weight: 600
       padding-bottom: 5px
@@ -50,6 +55,14 @@
         font-size: 15px
       &:last-child
         margin-bottom: 0
+    &-subtitle
+      background-color: #befcff74
+      padding: 20px
+      margin: 20px 0 0
+      border-left: 10px solid var(--secondary-color)
+      p
+        font-size: 14px
+        margin: 0        
   &-stat
     padding: 25px 0
     border-bottom: 1px solid var(--secondary-color)
