--- a/sass/_block-whynearshore.sass
+++ b/sass/_block-whynearshore.sass
@@ -70,6 +70,57 @@
       @media (max-width: 767px)
         margin: 0 0 20px      
 
+  &.theme-people
+    background-color: var(--dark-bg)
+    .theme-hero-pills
+      justify-content: space-between
+      p
+        font-size: 13px
+        white-space: nowrap
+    .block-whynearshore-data
+      .block-whynearshore-title
+        color: white
+        h3
+          color: var(--aqua-fosfo)
+          margin: 0 0 15px
+        h2
+          color: white
+    .blocks-featuredcopy
+      display: flex
+      justify-content: flex-start
+      align-items: center
+      .block-whynearshore-featuredcopy
+        background-color: var(--primary-color)
+        border-radius: 20px
+        height: auto
+        display: flex
+        justify-content: center
+        align-items: center
+        flex-wrap: wrap
+        font-size: 25px
+        color: var(--lightblue)
+        box-shadow: none
+        padding: 20px 0
+        line-height: 1 !important
+        margin: 0
+        span
+          line-height: 1 !important
+          position: relative
+          margin: 0 0 10px
+          &:last-child  
+            margin: 0
+            color: white
+            width: 100%
+            text-align: center
+            font-size: 14px
+            font-weight: normal
+            line-height: 1
+        &:first-child
+          margin-right: 20px
+        
+
+
+
   &.theme-timeline
     background-color: var(--secondary-color)
     .block-whynearshore-item,
